--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -150,6 +150,52 @@
     <Compile Include="Core\MouseKeyHook\WinApi\MouseStruct.cs" />
     <Compile Include="Core\MouseKeyHook\WinApi\Point.cs" />
     <Compile Include="Core\MouseKeyHook\WinApi\ThreadNativeMethods.cs" />
+    <Compile Include="Core\NAudio\Mixer\BooleanMixerControl.cs" />
+    <Compile Include="Core\NAudio\Mixer\CustomMixerControl.cs" />
+    <Compile Include="Core\NAudio\Mixer\ListTextMixerControl.cs" />
+    <Compile Include="Core\NAudio\Mixer\Mixer.cs" />
+    <Compile Include="Core\NAudio\Mixer\MixerControl.cs" />
+    <Compile Include="Core\NAudio\Mixer\MixerControlType.cs" />
+    <Compile Include="Core\NAudio\Mixer\MixerFlags.cs" />
+    <Compile Include="Core\NAudio\Mixer\MixerInterop.cs" />
+    <Compile Include="Core\NAudio\Mixer\MixerLine.cs" />
+    <Compile Include="Core\NAudio\Mixer\MixerLineComponentType.cs" />
+    <Compile Include="Core\NAudio\Mixer\SignedMixerControl.cs" />
+    <Compile Include="Core\NAudio\Mixer\UnsignedMixerControl.cs" />
+    <Compile Include="Core\NAudio\Utils\CircularBuffer.cs" />
+    <Compile Include="Core\NAudio\Utils\WavePositionExtensions.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\Manufacturers.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\MmException.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\MmResult.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\MmTime.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveCallbackInfo.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveCallbackStrategy.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveHeader.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveHeaderFlags.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveInCapabilities.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveInEventArgs.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveInterop.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveOutCapabilities.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveOutSupport.cs" />
+    <Compile Include="Core\NAudio\Wave\MmeInterop\WaveWindow.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveFormats\WaveFormat.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveFormats\WaveFormatEncoding.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveFormats\WaveFormatExtraData.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveInEvent .cs" />
+    <Compile Include="Core\NAudio\Wave\WaveInputs\IWaveIn.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveInputs\WaveIn.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveOutputs\IWaveBuffer.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveOutputs\IWavePlayer.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveOutputs\IWaveProvider.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveOutputs\IWaveProviderFloat.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveOutputs\PlaybackState.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveOutputs\StoppedEventArgs.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveOutputs\WaveBuffer.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveOutputs\WaveOut.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveOutputs\WaveOutEvent.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveProviders\BufferedWaveProvider.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveStreams\WaveInBuffer.cs" />
+    <Compile Include="Core\NAudio\Wave\WaveStreams\WaveOutBuffer.cs" />
     <Compile Include="Core\NetSerializer\CodeGenContext.cs" />
     <Compile Include="Core\NetSerializer\Helpers.cs" />
     <Compile Include="Core\NetSerializer\ITypeSerializer.cs" />
@@ -161,6 +207,8 @@
     <Compile Include="Core\NetSerializer\TypeSerializers\GenericSerializer.cs" />
     <Compile Include="Core\NetSerializer\TypeSerializers\ObjectSerializer.cs" />
     <Compile Include="Core\NetSerializer\TypeSerializers\PrimitivesSerializer.cs" />
+    <Compile Include="Core\Packets\ClientPackets\GetAudioDevicesResponse.cs" />
+    <Compile Include="Core\Packets\ClientPackets\GetAudioStreamResponse.cs" />
     <Compile Include="Core\Packets\ClientPackets\GetChangeRegistryValueResponse.cs" />
     <Compile Include="Core\Packets\ClientPackets\GetConnectionsResponse.cs" />
     <Compile Include="Core\Packets\ClientPackets\GetCreateRegistryKeyResponse.cs" />
@@ -173,6 +221,7 @@
     <Compile Include="Core\Packets\ClientPackets\GetRenameRegistryKeyResponse.cs" />
     <Compile Include="Core\Packets\ClientPackets\GetRenameRegistryValueResponse.cs" />
     <Compile Include="Core\Packets\ClientPackets\SetStatusFileManager.cs" />
+    <Compile Include="Core\Packets\ClientPackets\StopAudioStreamResponse.cs" />
     <Compile Include="Core\Packets\PacketRegistery.cs" />
     <Compile Include="Core\Packets\ServerPackets\DoAskElevate.cs" />
     <Compile Include="Core\Packets\ServerPackets\DoChangeRegistryValue.cs" />
@@ -186,10 +235,13 @@
     <Compile Include="Core\Packets\ServerPackets\DoRenameRegistryKey.cs" />
     <Compile Include="Core\Packets\ServerPackets\DoRenameRegistryValue.cs" />
     <Compile Include="Core\Packets\ServerPackets\DoWebcamStop.cs" />
+    <Compile Include="Core\Packets\ServerPackets\GetAudioDevices.cs" />
+    <Compile Include="Core\Packets\ServerPackets\GetAudioStream.cs" />
     <Compile Include="Core\Packets\ServerPackets\GetConnections.cs" />
     <Compile Include="Core\Packets\ServerPackets\GetWebcam.cs" />
     <Compile Include="Core\Packets\ServerPackets\GetWebcams.cs" />
     <Compile Include="Core\Packets\ServerPackets\SetAuthenticationSuccess.cs" />
+    <Compile Include="Core\Packets\ServerPackets\StopAudioStream.cs" />
     <Compile Include="Core\Registry\RegSeekerMatch.cs" />
     <Compile Include="Core\Registry\RegValueData.cs" />
     <Compile Include="Core\Registry\RegValueHelper.cs" />
@@ -283,6 +335,12 @@
     <Compile Include="Enums\ShutdownAction.cs" />
     <Compile Include="Enums\UserStatus.cs" />
     <Compile Include="Enums\WordType.cs" />
+    <Compile Include="Forms\FrmMicrophone.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmMicrophone.Designer.cs">
+      <DependentUpon>FrmMicrophone.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmRemoteWebcam.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -452,6 +510,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Data\BuilderProfile.cs" />
     <Compile Include="Core\Data\Settings.cs" />
+    <EmbeddedResource Include="Forms\FrmMicrophone.resx">
+      <DependentUpon>FrmMicrophone.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmRemoteWebcam.resx">
       <DependentUpon>FrmRemoteWebcam.cs</DependentUpon>
     </EmbeddedResource>
@@ -542,6 +603,7 @@
     </EmbeddedResource>
     <Compile Include="Core\Extensions\SocketExtensions.cs" />
     <None Include="app.manifest" />
+    <None Include="Core\NAudio\Wave\WaveInputs\WaveInEvent.cs0" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
